Dev 1.1.0 (#8)
* adding support for fetching data from the weather underground api (wip)

* adding support for fetching data from the weather underground api (wip)

* adding support for fetching data from the weather underground api

* handle known bad days in weather underground data

* handle more stations

* handle weather underground files better

* improved weather underground data handling, fixed averages on null values

* prepare for trying to add chirps data

* small name change

* small name change
