# src/main/openapi/api.yml
@@ -141,12 +141,39 @@ paths:
       responses:
         "200":
           description: OK
-  /api/v1/admin/process/api:
+  /api/v1/admin/process/api/weather-underground:
+    get:
+      tags:
+      - Admin
+      summary: Status of processing the Weather Underground API data.
+      operationId: getWeatherUndergroundApiProcessStatus
+      responses:
+        "200":
+          description: OK
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/ApiStatus"
+    post:
+      tags:
+      - Admin
+      summary: Manually trigger the processing of Weather Underground API data.
+      operationId: triggerWeatherUndergroundApiProcessing
+      parameters:
+      - name: fetchAllData
+        in: query
+        required: false
+        schema:
+          type: boolean
+      responses:
+        "200":
+          description: OK
+  /api/v1/admin/process/api/ambient-weather:
     get:
       tags:
       - Admin
       summary: Status of processing the Ambient Weather API data.
-      operationId: getApiProcessStatus
+      operationId: getAmbientWeatherApiProcessStatus
       responses:
         "200":
           description: OK
@@ -158,7 +185,7 @@ paths:
       tags:
       - Admin
       summary: Manually trigger the processing of Ambient Weather API data.
-      operationId: triggerApiProcessing
+      operationId: triggerAmbientWeatherApiProcessing
       responses:
         "200":
           description: OK
@@ -169,11 +196,13 @@ paths:
       summary: "Returns all weather data, for the optional filter criteria."
       operationId: getWeather
       parameters:
-      - name: station
+      - name: stations
         in: query
         required: false
         schema:
-          type: string
+          type: array
+          items:
+            type: string
       - name: grouping
         in: query
         required: false
@@ -251,21 +280,6 @@ paths:
             '*/*':
               schema:
                 $ref: "#/components/schemas/WeatherDataDto"
-  /api/v1/weather/status:
-    get:
-      tags:
-      - Weather
-      summary: Returns the status information for all weather stations.
-      operationId: getWeatherStatus
-      responses:
-        "200":
-          description: OK
-          content:
-            '*/*':
-              schema:
-                type: array
-                items:
-                  $ref: "#/components/schemas/WeatherStatusDto"
   /api/v1/weather/stations:
     get:
       tags:
@@ -281,6 +295,21 @@ paths:
                 type: array
                 items:
                   type: string
+  /api/v1/weather/stations/details:
+    get:
+      tags:
+      - Weather
+      summary: Returns the status information for all weather stations.
+      operationId: getWeatherStatus
+      responses:
+        "200":
+          description: OK
+          content:
+            '*/*':
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/WeatherStationDto"
   /api/v1/version/server:
     get:
       tags:
@@ -364,18 +393,25 @@ components:
                     format: double
       required:
       - weather
-    WeatherStatusDto:
+    WeatherStationDto:
       type: object
       properties:
         station:
           type: string
           minLength: 1
-        lastProcessedOn:
+        startDate:
           type: string
           format: date
           minLength: 1
+        endDate:
+          type: string
+          format: date
+          minLength: 1
+        myStation:
+          type: boolean
       required:
-      - lastProcessedOn
+      - endDate
+      - startDate
       - station
     AppVersion:
       type: object
